--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -127,15 +127,15 @@
     <li class="nav-item dropdown user-menu">
         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
         <img src="/assets/img/user2-160x160.jpg" class="user-image rounded-circle shadow" alt="User Image">
-        <span class="d-none d-md-inline">Alexander Pierce</span>
+        <span class="d-none d-md-inline">{{user}}</span>
         </a>
         <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
         <!--begin::User Image-->
         <li class="user-header text-bg-primary">
             <img src="/assets/img/user2-160x160.jpg" class="rounded-circle shadow" alt="User Image">
             <p>
-           Eduardo Bardales Bruno
-            <small>2025</small>
+            {{user}}
+            <small>Member since Nov. 2023</small>
             </p>
         </li>
         <!--end::User Image-->
@@ -153,7 +153,7 @@
         <!--begin::Menu Footer-->
         <li class="user-footer">
             <a href="#" class="btn btn-default btn-flat">Profile</a>
-            <a href="#" class="btn btn-default btn-flat float-end">Sign out</a>
+            <a type="button" class="btn btn-default btn-flat float-end" (click)="signOut()">Sign out</a>
         </li>
         <!--end::Menu Footer-->
         </ul>
