--- a/src/app/components/roles-person/roles-person-list/roles-person.html
+++ b/src/app/components/roles-person/roles-person-list/roles-person.html
@@ -101,7 +101,7 @@
                 </ngx-datatable-column>
                 
                 <!-- 🆕 Columna de Persona enriquecida -->
-                <ngx-datatable-column name="PERSONA" [width]="250">
+                <ngx-datatable-column name="PERSONA" [width]="150">
                   <ng-template let-row="row" ngx-datatable-cell-template>
                     <div class="d-flex flex-column">
                       <ng-container *ngIf="row.loading">
@@ -159,14 +159,14 @@
                   name="ACCIONES"
                   [sortable]="false"
                   [canAutoResize]="false"
-                  [width]="150"
+                  [width]="100"
                   [headerClass]="'text-center'"
                   [cellClass]="'text-center'"
                 >
                   <ng-template let-row="row" ngx-datatable-cell-template>
-                    <div class="btn-group" role="group">
+                    <div class="btn-group" role="group" width="40">
                       <button
-                        class="btn btn-warning btn-sm"
+                        class="btn btn-warning btn-sm me-2"
                         [routerLink]="['/rolesperson/edit', row.id]"
                         title="Editar registro"
                       >
