commit  desorganizado asl 18y 46 el 11 del 07 del 2025

--- a/src/app/components/auth/sign-in/sign-in.html
+++ b/src/app/components/auth/sign-in/sign-in.html
@@ -1,9 +1,13 @@
 <div class="login-box">
   <div class="card card-outline card-primary">
-    <div class="card-header">
-      <a class="link-dark text-center link-offset-2 link-opacity-100 link-opacity-50-hover" href="/dist/pages/index2">
-        <h1 class="mb-0"><b>DELITOS</b>INFORMES</h1>
-      </a>
+    <div class="card-header text-center bg-primary text-white">
+      <div class="login-logo mb-2">
+        <i class="bi bi-shield-lock-fill text-white" style="font-size: 3rem;"></i>
+      </div>
+      <h1 class="mb-0 fw-bold">
+        <span class="text-warning">DELITOS</span><span class="text-white">INFORMES</span>
+      </h1>
+      <p class="mb-0 mt-2 text-light opacity-75">Sistema de Gestión de Casos</p>
     </div>
 
     <div class="card-body login-card-body">
@@ -55,9 +59,8 @@
 
         <br>
 
-        <div class="row">
-          <div class="col-8 d-inline-flex align-items-center"></div>
-          <div class="col-4">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-6">
             <div class="d-grid gap-2">
               <button type="button" class="btn btn-success" (click)="login()">Ingresar</button>
             </div>
