--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -4,7 +4,7 @@
     <!--begin::Start Navbar Links-->
     <ul class="navbar-nav">
     <li class="nav-item">
-        <a class="nav-link" data-lte-toggle="sidebar" href="#" role="button">
+        <a class="nav-link" href="#" role="button" (click)="toggleSidebar(); $event.preventDefault()">
         <i class="bi bi-list"></i>
         </a>
     </li>
@@ -143,17 +143,38 @@
         <li class="user-body">
             <!--begin::Row-->
             <div class="row">
-            <div class="col-4 text-center"><a href="#">Followers</a></div>
-            <div class="col-4 text-center"><a href="#">Sales</a></div>
-            <div class="col-4 text-center"><a href="#">Friends</a></div>
+            <div class="col-4 text-center">
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-folder2-open d-block"></i>
+                <small>Casos</small>
+              </a>
+            </div>
+            <div class="col-4 text-center">
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-people d-block"></i>
+                <small>Personas</small>
+              </a>
+            </div>
+            <div class="col-4 text-center">
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-bar-chart d-block"></i>
+                <small>Reportes</small>
+              </a>
+            </div>
             </div>
             <!--end::Row-->
         </li>
         <!--end::Menu Body-->
         <!--begin::Menu Footer-->
-        <li class="user-footer">
-            <a href="#" class="btn btn-default btn-flat">Profile</a>
-            <a type="button" class="btn btn-default btn-flat float-end" (click)="signOut()">Sign out</a>
+        <li class="user-footer d-flex justify-content-between gap-1 px-2 pb-2">
+          <a [routerLink]="['/perfil']" class="btn btn-gradient-profile btn-sm d-flex align-items-center justify-content-center px-3 py-1">
+            <i class="bi bi-person-circle me-1 fs-5"></i>
+            <span class="fw-bold">Perfil</span>
+          </a>
+          <button type="button" class="btn btn-gradient-logout btn-sm d-flex align-items-center justify-content-center px-3 py-1" (click)="signOut()">
+            <i class="bi bi-box-arrow-right me-1 fs-5"></i>
+            <span class="fw-bold">Salir</span>
+          </button>
         </li>
         <!--end::Menu Footer-->
         </ul>
