--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -133,7 +133,7 @@
 
                 <!-- Reportes -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="return false;">
+                    <a class="nav-link" [routerLink]="['/graficos']" routerLinkActive="active" onclick="return false;">
                         <i class="nav-icon bi bi-bar-chart-fill"></i>
                         <p>Reportes y Estadísticas</p>
                     </a>
@@ -141,7 +141,7 @@
 
                 <!-- Gestión de Usuarios -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="return false;">
+                    <a class="nav-link" [routerLink]="['/usuarios']" routerLinkActive="active" onclick="return false;">
                         <i class="nav-icon bi bi-people-fill"></i>
                         <p>Gestión de Usuarios</p>
                     </a>
